# controle-de-fornecedores

./: .eslintrc.json  .gitignore  README.md  index.html  package-lock.json  package.json  shell.nix  tag-name  tailwind.config.cjs  tsconfig.node.json
dist_/: index.html
dist_/assets/: index.e50f8d0a.js
src/: App.tsx  Routes.tsx  global.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src-tauri/src/export/: mod.rs
src-tauri/src/modules/: count_pages_from_db.rs  create_database.rs  delete_in_database.rs  edit_in_database.rs  exist_in_database.rs  export_database_to_exel.rs  insert_in_database.rs  insert_user_in_database.rs  insert_user_in_databese.rs  mod.rs  renew_user_token.rs  select_all_users_from_database.rs  select_from_database.rs  select_from_id_in_database(not_use).rs  select_from_id_in_database.rs  select_from_mes_in_database.rs  token.rs  verify_session.rs  verify_user_password.rs
src-tauri/src/modules - Copia/: count_pages_from_db.rs  create_database.rs  edit_in_database.rs  insert_in_database.rs  mod.rs
src/modules/: db.tsx
src/pages/: InserirPages copy.tsx  InserirPages.tsx  ListPage.tsx  index.ts  popUp.css  popUp.tsx
src/pages/dashboard/: Dashboard.tsx
src/pages/entrada/: Entrada.tsx
src/pages/export/: ExportFornecedores.tsx
src/pages/fornecedores/: DetalhesFornecedores.tsx  ListagemDeFornecedores.tsx  NovoFornecedores.tsx
src/pages/saida/: Saida.tsx
src/pages/users/: DetalhesUsuarios.tsx  ListagemDeUsuarios.tsx
src/routes/: index.tsx
src/shared/components/: index.ts
src/shared/components/DetailTools/: DetailTools.tsx
src/shared/components/ListingTools/: ListingTools.tsx
src/shared/components/ferramentas-da-listagem/: FerramentasDaListagem.tsx
src/shared/components/ferramentas-de-detalhe/: FerramentasDeDetalhe.tsx
src/shared/components/login/: Login.tsx
src/shared/components/menu-lateral/: MenuLateral.tsx
src/shared/contexts/: AuthContext.tsx  DrawerContext.tsx  ThemeContext.tsx  index.ts
src/shared/environment/: index.ts
src/shared/forms/: IVFormErrors.ts  TraducoesYup.ts  VForm.ts  VScope.ts  VTextField.tsx  index.ts
src/shared/layouts/: LayoutBaseDePagina.tsx  LayoutBaseFromPages.tsx  index.ts
src/shared/services/auth/: AuthService.ts  AuthServiceRequest.ts  TokenValidation.ts
src/shared/services/fornecedores-services/: create.ts  (+6 more)
src/shared/themes/: Dark.ts  Light.ts
src/styles/: default.css  tableNoWrap.css
(+5 files in other folders)
