[package]
name = "controle-de-fornecedores"
version = "1.1.0"
description = "Controle a entrada de fornecedores"
authors = ["felipecaninnovaes"]
license = "GNU General Public License v3.0"
repository = "https://github.com/felipecaninnovaes/controle-de-fornecedores"
edition = "2021"
rust-version = "1.70"

[build-dependencies]
tauri-build = { version = "1.2.1", features = [] }

[dependencies]
rusqlite = { version = "0.28.0", features = ["bundled"] }
rust_xlsxwriter = "0.29.0"
serde = {version = "1.0.150", features = ["derive"] }
serde_rusqlite = "0.31.0"
serde_json = { version ="1.0.94"}
tauri = { version = "1.2.4", features = ["api-all"] }
chrono = "0.4.24"
md5 = "0.7.0"

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]
