[package]
name = "controle-de-fornecedores"
version = "1.2.0"
description = "Controle a entrada de fornecedores"
authors = ["felipecaninnovaes"]
license = "GNU General Public License v3.0"
repository = "https://github.com/felipecaninnovaes/controle-de-fornecedores"
edition = "2021"
rust-version = "1.73"

[build-dependencies]
tauri-build = { version = "1.4.0", features = [] }

[dependencies]
rusqlite = { version = "0.29.0", features = ["bundled"] }
rust_xlsxwriter = "0.42.0"
serde = {version = "1.0.174", features = ["derive"] }
serde_rusqlite = "0.33.1"
serde_json = { version ="1.0.103"}
tauri = { version = "1.4.1", features = ["api-all"] }
chrono = "0.4.26"
md5 = "0.7.0"

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]
