[package]
name = "controle-de-fornecedores"
version = "1.2.0"
description = "Controle a entrada de fornecedores"
authors = ["felipecaninnovaes"]
license = "GNU General Public License v3.0"
repository = "https://github.com/felipecaninnovaes/controle-de-fornecedores"
edition = "2021"
rust-version = "1.76"

[build-dependencies]
tauri-build = { version = "1.5.0", features = [] }

[dependencies]
rusqlite = { version = "0.30.0", features = ["bundled"] }
rust_xlsxwriter = "0.56.0"
serde = { version = "1.0.193", features = ["derive"] }
serde_rusqlite = "0.34.0"
serde_json = { version = "1.0.108" }
tauri = { version = "1.5.2", features = ["api-all"] }
chrono = "0.4.31"
md5 = "0.7.0"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
